--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,12 +35,13 @@ jobs:
           echo "📦 Checking package.json..."
           cat package.json
 
-      - name: Deploy to Cloudflare Workers
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          workingDirectory: ./worker
-          command: deploy
+      - name: Deploy to Cloudflare Workers (direct call)
+        working-directory: ./worker
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+        run: |
+          echo "🚀 Starting Wrangler deployment..."
+          npx wrangler deploy --verbose
 
       - name: Deployment notification
         if: success()
