Temporarily disable KV to test deployment - token needs KV write permissions

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -7,9 +7,10 @@ compatibility_flags = ["nodejs_compat"]
 account_id = "9787bc5a799dbb7d09f45960759b564d"
 
 # KV для хранения состояния создания рассылок
-[[kv_namespaces]]
-binding = "BROADCAST_STATE"
-id = "b883ce45a3ce4431969d209637709300"
+# ВРЕМЕННО ОТКЛЮЧЕНО для проверки деплоя - нужно добавить права на KV в токен
+# [[kv_namespaces]]
+# binding = "BROADCAST_STATE"
+# id = "b883ce45a3ce4431969d209637709300"
 
 # Cron Triggers - автоматическая проверка пользователей каждые 15 минут
 [triggers]
