--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -11,9 +11,9 @@ account_id = "9787bc5a799dbb7d09f45960759b564d"
 binding = "BROADCAST_STATE"
 id = "b883ce45a3ce4431969d209637709300"
 
-# Cron Triggers - автоматическая проверка пользователей каждые 15 минут
+# Cron Triggers - автоматическая проверка и обновление пользователей каждые 5 минут
 [triggers]
-crons = ["*/15 * * * *"]
+crons = ["*/5 * * * *"]
 
 # Переменные окружения (НЕ ДОБАВЛЯЙТЕ СЮДА СЕКРЕТЫ!)
 # Секреты добавляйте через: wrangler secret put <SECRET_NAME>
